Use MdUtil.isIBondTickerPrefix to exclude I bond price quotes from single date logic